[gd_scene load_steps=34 format=2]

[ext_resource path="res://object/Player.gd" type="Script" id=1]
[ext_resource path="res://image/panda/Panda Slide.png" type="Texture" id=2]
[ext_resource path="res://image/panda/Panda-Idle0.png" type="Texture" id=3]
[ext_resource path="res://image/panda/Panda-Idle1.png" type="Texture" id=4]
[ext_resource path="res://image/panda/Panda-Idle2.png" type="Texture" id=5]
[ext_resource path="res://image/panda/Panda-Idle3.png" type="Texture" id=6]
[ext_resource path="res://image/panda/Panda-Idle4.png" type="Texture" id=7]
[ext_resource path="res://image/panda/Panda-Idle5.png" type="Texture" id=8]
[ext_resource path="res://image/panda/Panda-Idle6.png" type="Texture" id=9]
[ext_resource path="res://image/panda/Panda-Idle7.png" type="Texture" id=10]
[ext_resource path="res://image/panda/Panda-Run0.png" type="Texture" id=11]
[ext_resource path="res://image/panda/Panda-Run1.png" type="Texture" id=12]
[ext_resource path="res://image/panda/Panda-Run2.png" type="Texture" id=13]
[ext_resource path="res://image/panda/Panda-Run3.png" type="Texture" id=14]
[ext_resource path="res://image/panda/Panda-Run4.png" type="Texture" id=15]
[ext_resource path="res://image/panda/Panda-Run5.png" type="Texture" id=16]
[ext_resource path="res://image/panda/Panda- Jump Up.png" type="Texture" id=17]
[ext_resource path="res://image/panda/Panda- Jump Down.png" type="Texture" id=18]
[ext_resource path="res://image/powerUps/Shield powerup0001.png" type="Texture" id=19]
[ext_resource path="res://image/powerUps/Shield powerup0002.png" type="Texture" id=20]
[ext_resource path="res://image/powerUps/Shield powerup0003.png" type="Texture" id=21]
[ext_resource path="res://image/powerUps/Shield powerup0004.png" type="Texture" id=22]
[ext_resource path="res://image/powerUps/Shield powerup0005.png" type="Texture" id=23]
[ext_resource path="res://image/powerUps/Manetpowerups001.png" type="Texture" id=24]
[ext_resource path="res://image/powerUps/Manetpowerups002.png" type="Texture" id=25]
[ext_resource path="res://image/powerUps/Manetpowerups003.png" type="Texture" id=26]
[ext_resource path="res://image/powerUps/Manetpowerups004.png" type="Texture" id=27]
[ext_resource path="res://image/powerUps/Manetpowerups005.png" type="Texture" id=28]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "slide",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "jumpUp",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "jumpDown",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

radius = 34.752
height = 57.0884

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=5]

radius = 30.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="normalShape" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="shieldAni" type="Node2D" parent="."]
editor/display_folded = true
visible = false
modulate = Color( 1, 1, 1, 0.956863 )
scale = Vector2( 2.56, 2.56 )

[node name="shieldAni" type="AnimatedSprite" parent="shieldAni"]
frames = SubResource( 3 )
frame = 1
playing = true

[node name="magnentAni" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.368627 )
position = Vector2( 0, -90.2502 )
frames = SubResource( 4 )
playing = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 12

[node name="normalShape2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.540359, 32.0635 )
shape = SubResource( 5 )

